--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll --verbose",
     "start": "nodemon index.js"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server": "^3.13.0",
     "graphql": "^16.9.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4"
   }
 }
